--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "llttugraz/moodle-lytix_logs",
+    "name": "llttugraz/lytix_logs",
     "description": "Logs the interactions with the widgets.",
     "keywords": [
         "moodle",
