--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         }
     ],
     "require": {
-        "moodle/moodle": "4.1.x",
+        "moodle/moodle": "4.1 - 4.3",
         "llttugraz/moodle-local_lytix": "*"
     }
 }
